--- a/templates/index.html
+++ b/templates/index.html
@@ -10,26 +10,26 @@
         </div>
     </div>
 
-{% for pic in range(2,8) %}
-{% if pic % 2 == 0 %}
-<div class="card-group justify-content-center">
-{% endif %}
-    <div class="card mb-3 mr-3" style="max-width: 540px;">
-      <div class="row no-gutters">
-        <div class="col-md-4">
-          <img src="{{url_for('static',filename = 'images/painting_2.jpg')}}" class="card-img" alt="...">
-        </div>
-        <div class="col-md-8">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <a href="#" class="btn">Details</a>
+{% for art in arts %}
+    {% if (art.id + 1) % 2 == 0 %}
+    <div class="card-group justify-content-center">
+    {% endif %}
+        <div class="card mb-3 mr-3" style="max-width: 540px;">
+          <div class="row no-gutters">
+            <div class="col-md-4">
+               <img class="col" src="{{ images[art.id-1] }}" alt="Art Image" />
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">{{ art.name }}</h5>
+                <p class="card-text">{{ art.description }}</p>
+                <a href="{{ url_for('details', id=art.id) }}" class="btn">Details</a>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
+    {% if (art.id + 1) % 2 == 1 %}
     </div>
-{% if pic % 2 == 1 %}
-</div>
-{% endif %}
+    {% endif %}
 {% endfor %}
 {% endblock %}
