Add shopping basket functionality (use session to indicate nr of items in basket)

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,9 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+        <li class="nav-item">
+            <a class="nav-link disabled" href="#">Cart ({{ session['Shoppingcart']|length }})</a>
+        </li>
       </nav>
     </div>
 
