--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,16 @@
         </div>
     </div>
 
+{% with messages = get_flashed_messages(with_categories=false) %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      {{ message }}
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
+
 {% for art in arts %}
     {% if (art.id + 1) % 2 == 0 %}
     <div class="card-group justify-content-center">
@@ -23,6 +33,11 @@
               <div class="card-body">
                 <h5 class="card-title">{{ art.name }}</h5>
                 <p class="card-text">{{ art.description }}</p>
+                <form action="{{ url_for('add_to_cart') }}" method="post">
+                    <input type="hidden" name="art_id" value="{{ art.id }}">
+                    <button type="submit" class="btn btn-warning btn-sm">🛒 Add To Card</button>
+                    <button type="submit" class="btn btn-info btn-sm">Buy Now</button>
+                </form>
                 <a href="{{ url_for('details', id=art.id, img=images[art.id-1]) }}" class="btn">Details</a>
               </div>
             </div>
