--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 
 {% with messages = get_flashed_messages(with_categories=false) %}
   {% if messages %}
-    <ul class=flashes>
+    <ul class="container-fluid text-center flashes">
     {% for message in messages %}
       {{ message }}
     {% endfor %}
@@ -36,6 +36,9 @@
                 <form action="{{ url_for('add_to_cart') }}" method="post">
                     <input type="hidden" name="art_id" value="{{ art.id }}">
                     <button type="submit" class="btn btn-warning btn-sm">🛒 Add To Card</button>
+                </form>
+                <form action="{{ url_for('buy_items') }}" method="post">
+                    <input type="hidden" name="items_in_basket" value="{{ session['Shoppingcart']}}">
                     <button type="submit" class="btn btn-info btn-sm">Buy Now</button>
                 </form>
                 <a href="{{ url_for('details', id=art.id, img=images[art.id-1]) }}" class="btn">Details</a>
